cmake_minimum_required(VERSION 2.8)

project(webrtc-audioproc)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

set(DEFINITIONS "-DWEBRTC_LINUX -DWEBRTC_POSIX -DWEBRTC_NS_FLOAT -DWEBRTC_AEC_DEBUG_DUMP=0 -DWEBRTC_APM_DEBUG_DUMP=0 -DWEBRTC_INTELLIGIBILITY_ENHANCER=0")
#-DWEBRTC_UNTRUSTED_DELAY

add_definitions(${DEFINITIONS})

include_directories(
    webrtc
    webrtc/webrtc/common_audio/signal_processing/include
    webrtc/webrtc/modules/audio_coding/codecs/isac/main/include
)

set(WEBRTC_SRC_
    base/buffer.cc
    base/checks.cc
    base/criticalsection.cc
    base/event.cc
    base/event_tracer.cc
    base/logging.cc
    base/platform_file.cc
    base/platform_thread.cc
    base/stringencode.cc
    base/thread_checker_impl.cc
    base/timeutils.cc
    common_audio/audio_converter.cc
    common_audio/audio_ring_buffer.cc
    common_audio/audio_util.cc
    common_audio/blocker.cc
    common_audio/channel_buffer.cc
    common_audio/fft4g.c
    common_audio/fir_filter.cc
    common_audio/fir_filter_sse.cc
    common_audio/lapped_transform.cc
    common_audio/real_fourier.cc
    common_audio/real_fourier_ooura.cc
    common_audio/resampler/push_resampler.cc
    common_audio/resampler/push_sinc_resampler.cc
    common_audio/resampler/resampler.cc
    common_audio/resampler/sinc_resampler.cc
    common_audio/resampler/sinc_resampler_sse.cc
    common_audio/resampler/sinusoidal_linear_chirp_source.cc
    common_audio/ring_buffer.c
    common_audio/signal_processing/auto_correlation.c
    common_audio/signal_processing/auto_corr_to_refl_coef.c
    common_audio/signal_processing/complex_bit_reverse.c
    common_audio/signal_processing/complex_fft.c
    common_audio/signal_processing/copy_set_operations.c
    common_audio/signal_processing/cross_correlation.c
    common_audio/signal_processing/division_operations.c
    common_audio/signal_processing/dot_product_with_scale.c
    common_audio/signal_processing/downsample_fast.c
    common_audio/signal_processing/energy.c
    common_audio/signal_processing/filter_ar.c
    common_audio/signal_processing/filter_ar_fast_q12.c
    common_audio/signal_processing/filter_ma_fast_q12.c
    common_audio/signal_processing/get_hanning_window.c
    common_audio/signal_processing/get_scaling_square.c
    common_audio/signal_processing/ilbc_specific_functions.c
    common_audio/signal_processing/levinson_durbin.c
    common_audio/signal_processing/lpc_to_refl_coef.c
    common_audio/signal_processing/min_max_operations.c
    common_audio/signal_processing/randomization_functions.c
    common_audio/signal_processing/real_fft.c
    common_audio/signal_processing/refl_coef_to_lpc.c
    common_audio/signal_processing/resample_48khz.c
    common_audio/signal_processing/resample_by_2.c
    common_audio/signal_processing/resample_by_2_internal.c
    common_audio/signal_processing/resample.c
    common_audio/signal_processing/resample_fractional.c
    common_audio/signal_processing/spl_init.c
    common_audio/signal_processing/splitting_filter.c
    common_audio/signal_processing/spl_sqrt.c
    common_audio/signal_processing/spl_sqrt_floor.c
    common_audio/signal_processing/sqrt_of_one_minus_x_squared.c
    common_audio/signal_processing/vector_scaling_operations.c
    common_audio/sparse_fir_filter.cc
    common_audio/vad/vad_core.c
    common_audio/vad/vad_filterbank.c
    common_audio/vad/vad_gmm.c
    common_audio/vad/vad_sp.c
    common_audio/vad/webrtc_vad.c
    common_audio/wav_file.cc
    common_audio/wav_header.cc
    common_audio/window_generator.cc
    common_types.cc
    modules/audio_coding/codecs/audio_decoder.cc
    modules/audio_coding/codecs/audio_encoder.cc
    modules/audio_coding/codecs/isac/locked_bandwidth_info.cc
    modules/audio_coding/codecs/isac/main/source/arith_routines.c
    modules/audio_coding/codecs/isac/main/source/arith_routines_hist.c
    modules/audio_coding/codecs/isac/main/source/arith_routines_logist.c
    modules/audio_coding/codecs/isac/main/source/audio_decoder_isac.cc
    modules/audio_coding/codecs/isac/main/source/audio_encoder_isac.cc
    modules/audio_coding/codecs/isac/main/source/bandwidth_estimator.c
    modules/audio_coding/codecs/isac/main/source/crc.c
    modules/audio_coding/codecs/isac/main/source/decode_bwe.c
    modules/audio_coding/codecs/isac/main/source/decode.c
    modules/audio_coding/codecs/isac/main/source/encode.c
    modules/audio_coding/codecs/isac/main/source/encode_lpc_swb.c
    modules/audio_coding/codecs/isac/main/source/entropy_coding.c
    modules/audio_coding/codecs/isac/main/source/fft.c
    modules/audio_coding/codecs/isac/main/source/filterbanks.c
    modules/audio_coding/codecs/isac/main/source/filterbank_tables.c
    modules/audio_coding/codecs/isac/main/source/filter_functions.c
    modules/audio_coding/codecs/isac/main/source/intialize.c
    modules/audio_coding/codecs/isac/main/source/isac.c
    modules/audio_coding/codecs/isac/main/source/lattice.c
    modules/audio_coding/codecs/isac/main/source/lpc_analysis.c
    modules/audio_coding/codecs/isac/main/source/lpc_gain_swb_tables.c
    modules/audio_coding/codecs/isac/main/source/lpc_shape_swb12_tables.c
    modules/audio_coding/codecs/isac/main/source/lpc_shape_swb16_tables.c
    modules/audio_coding/codecs/isac/main/source/lpc_tables.c
    modules/audio_coding/codecs/isac/main/source/pitch_estimator.c
    modules/audio_coding/codecs/isac/main/source/pitch_filter.c
    modules/audio_coding/codecs/isac/main/source/pitch_gain_tables.c
    modules/audio_coding/codecs/isac/main/source/pitch_lag_tables.c
    modules/audio_coding/codecs/isac/main/source/spectrum_ar_model_tables.c
    modules/audio_coding/codecs/isac/main/source/transform.c
    modules/audio_processing/aec/aec_core.cc
    modules/audio_processing/aec/aec_core.h
    modules/audio_processing/aec/aec_core_optimized_methods.h
    modules/audio_processing/aec/aec_rdft.cc
    modules/audio_processing/aec/aec_rdft.h
    modules/audio_processing/aec/aec_resampler.cc
    modules/audio_processing/aec/aec_resampler.h
    modules/audio_processing/aec/echo_cancellation.cc
    modules/audio_processing/aec/echo_cancellation.h
    modules/audio_processing/aecm/aecm_core.cc
    modules/audio_processing/aecm/aecm_core.h
    modules/audio_processing/aecm/echo_control_mobile.cc
    modules/audio_processing/aecm/echo_control_mobile.h
    modules/audio_processing/agc/agc.cc
    modules/audio_processing/agc/agc.h
    modules/audio_processing/agc/agc_manager_direct.cc
    modules/audio_processing/agc/agc_manager_direct.h
    modules/audio_processing/agc/gain_map_internal.h
    modules/audio_processing/agc/loudness_histogram.cc
    modules/audio_processing/agc/loudness_histogram.h
    modules/audio_processing/agc/legacy/analog_agc.c
    modules/audio_processing/agc/legacy/analog_agc.h
    modules/audio_processing/agc/legacy/digital_agc.c
    modules/audio_processing/agc/legacy/digital_agc.h
    modules/audio_processing/agc/legacy/gain_control.h
    modules/audio_processing/agc/utility.cc
    modules/audio_processing/agc/utility.h
    modules/audio_processing/audio_buffer.cc
    modules/audio_processing/audio_buffer.h
    modules/audio_processing/audio_processing.cc
    modules/audio_processing/audio_processing_impl.cc
    modules/audio_processing/audio_processing_impl.h
    modules/audio_processing/beamformer/array_util.cc
    modules/audio_processing/beamformer/array_util.h
    modules/audio_processing/beamformer/complex_matrix.h
    modules/audio_processing/beamformer/covariance_matrix_generator.cc
    modules/audio_processing/beamformer/covariance_matrix_generator.h
    modules/audio_processing/beamformer/matrix.h
    modules/audio_processing/beamformer/nonlinear_beamformer.cc
    modules/audio_processing/beamformer/nonlinear_beamformer.h
    modules/audio_processing/common.h
    modules/audio_processing/echo_cancellation_impl.cc
    modules/audio_processing/echo_cancellation_impl.h
    modules/audio_processing/echo_control_mobile_impl.cc
    modules/audio_processing/echo_control_mobile_impl.h
    modules/audio_processing/gain_control_for_experimental_agc.cc
    modules/audio_processing/gain_control_for_experimental_agc.h
    modules/audio_processing/gain_control_impl.cc
    modules/audio_processing/gain_control_impl.h
    modules/audio_processing/high_pass_filter_impl.cc
    modules/audio_processing/high_pass_filter_impl.h
    modules/audio_processing/include/audio_processing.h
    modules/audio_processing/include/config.cc
    modules/audio_processing/include/config.h
    modules/audio_processing/level_controller/biquad_filter.cc
    modules/audio_processing/level_controller/biquad_filter.h
    modules/audio_processing/level_controller/down_sampler.cc
    modules/audio_processing/level_controller/down_sampler.h
    modules/audio_processing/level_controller/gain_applier.cc
    modules/audio_processing/level_controller/gain_applier.h
    modules/audio_processing/level_controller/gain_selector.cc
    modules/audio_processing/level_controller/gain_selector.h
    modules/audio_processing/level_controller/lc_constants.h
    modules/audio_processing/level_controller/level_controller.cc
    modules/audio_processing/level_controller/level_controller.h
    modules/audio_processing/level_controller/noise_spectrum_estimator.cc
    modules/audio_processing/level_controller/noise_spectrum_estimator.h
    modules/audio_processing/level_controller/noise_level_estimator.cc
    modules/audio_processing/level_controller/noise_level_estimator.h
    modules/audio_processing/level_controller/peak_level_estimator.cc
    modules/audio_processing/level_controller/peak_level_estimator.h
    modules/audio_processing/level_controller/saturating_gain_estimator.cc
    modules/audio_processing/level_controller/saturating_gain_estimator.h
    modules/audio_processing/level_controller/signal_classifier.cc
    modules/audio_processing/level_controller/signal_classifier.h
    modules/audio_processing/level_estimator_impl.cc
    modules/audio_processing/level_estimator_impl.h
    modules/audio_processing/logging/apm_data_dumper.cc
    modules/audio_processing/logging/apm_data_dumper.h
    modules/audio_processing/noise_suppression_impl.cc
    modules/audio_processing/noise_suppression_impl.h
    modules/audio_processing/render_queue_item_verifier.h
    modules/audio_processing/rms_level.cc
    modules/audio_processing/rms_level.h
    modules/audio_processing/splitting_filter.cc
    modules/audio_processing/splitting_filter.h
    modules/audio_processing/three_band_filter_bank.cc
    modules/audio_processing/three_band_filter_bank.h
    modules/audio_processing/transient/common.h
    modules/audio_processing/transient/daubechies_8_wavelet_coeffs.h
    modules/audio_processing/transient/dyadic_decimator.h
    modules/audio_processing/transient/moving_moments.cc
    modules/audio_processing/transient/moving_moments.h
    modules/audio_processing/transient/transient_detector.cc
    modules/audio_processing/transient/transient_detector.h
    modules/audio_processing/transient/transient_suppressor.cc
    modules/audio_processing/transient/transient_suppressor.h
    modules/audio_processing/transient/wpd_node.cc
    modules/audio_processing/transient/wpd_node.h
    modules/audio_processing/transient/wpd_tree.cc
    modules/audio_processing/transient/wpd_tree.h
    modules/audio_processing/typing_detection.cc
    modules/audio_processing/typing_detection.h
    modules/audio_processing/utility/block_mean_calculator.cc
    modules/audio_processing/utility/block_mean_calculator.h
    modules/audio_processing/utility/delay_estimator.cc
    modules/audio_processing/utility/delay_estimator.h
    modules/audio_processing/utility/delay_estimator_internal.h
    modules/audio_processing/utility/delay_estimator_wrapper.cc
    modules/audio_processing/utility/delay_estimator_wrapper.h
    modules/audio_processing/vad/common.h
    modules/audio_processing/vad/gmm.cc
    modules/audio_processing/vad/gmm.h
    modules/audio_processing/vad/noise_gmm_tables.h
    modules/audio_processing/vad/pitch_based_vad.cc
    modules/audio_processing/vad/pitch_based_vad.h
    modules/audio_processing/vad/pitch_internal.cc
    modules/audio_processing/vad/pitch_internal.h
    modules/audio_processing/vad/pole_zero_filter.cc
    modules/audio_processing/vad/pole_zero_filter.h
    modules/audio_processing/vad/standalone_vad.cc
    modules/audio_processing/vad/standalone_vad.h
    modules/audio_processing/vad/vad_audio_proc.cc
    modules/audio_processing/vad/vad_audio_proc.h
    modules/audio_processing/vad/vad_audio_proc_internal.h
    modules/audio_processing/vad/vad_circular_buffer.cc
    modules/audio_processing/vad/vad_circular_buffer.h
    modules/audio_processing/vad/voice_activity_detector.cc
    modules/audio_processing/vad/voice_activity_detector.h
    modules/audio_processing/vad/voice_gmm_tables.h
    modules/audio_processing/voice_detection_impl.cc
    modules/audio_processing/voice_detection_impl.h
    modules/audio_processing/aec/aec_core_sse2.cc
    modules/audio_processing/aec/aec_rdft_sse2.cc
    modules/audio_processing/ns/defines.h
    modules/audio_processing/ns/noise_suppression.h
    modules/audio_processing/ns/noise_suppression.c
    modules/audio_processing/ns/ns_core.c
    modules/audio_processing/ns/ns_core.h
    modules/audio_processing/ns/windows_private.h
    modules/audio_processing/aecm/aecm_core_c.cc
    system_wrappers/source/aligned_malloc.cc
    system_wrappers/source/cpu_features.cc
    system_wrappers/source/file_impl.cc
    system_wrappers/source/logging.cc
    system_wrappers/source/metrics_default.cc
    system_wrappers/source/rw_lock.cc
    system_wrappers/source/rw_lock_posix.cc
    system_wrappers/source/trace_impl.cc
    system_wrappers/source/trace_posix.cc
)


set(WEBRTC_INCLUDE_
    call.h
    common_types.h
    config.h
    engine_configurations.h
    transport.h
    typedefs.h
    video_decoder.h
    video_encoder.h
    video_frame.h
    video_receive_stream.h
    video_send_stream.h
    base/worker.h
    base/win32.h
    base/socketfactory.h
    base/crc32.h
    base/window.h
    base/ratetracker.h
    base/sslconfig.h
    base/platform_thread.h
    base/dbus.h
    base/win32socketserver.h
    base/sha1.h
    base/faketaskrunner.h
    base/sigslot.h
    base/openssladapter.h
    base/swap_queue.h
    base/fileutils.h
    base/flags.h
    base/gtest_prod_util.h
    base/win32socketinit.h
    base/location.h
    base/scoped_autorelease_pool.h
    base/basictypes.h
    base/maccocoasocketserver.h
    base/win32windowpicker.h
    base/timing.h
    base/nullsocketserver.h
    base/constructormagic.h
    base/trace_event.h
    base/logsinks.h
    base/sha1digest.h
    base/winping.h
    base/filerotatingstream.h
    base/socketaddresspair.h
    base/socketadapters.h
    base/httpcommon.h
    base/asyncsocket.h
    base/httpclient.h
    base/type_traits.h
    base/thread_checker.h
    base/md5.h
    base/asyncresolverinterface.h
    base/gunit_prod.h
    base/proxydetect.h
    base/autodetectproxy.h
    base/macconversion.h
    base/profiler.h
    base/dscp.h
    base/scoped_ref_ptr.h
    base/sec_buffer.h
    base/stringutils.h
    base/sanitizer.h
    base/array_view.h
    base/natsocketfactory.h
    base/thread.h
    base/socketaddress.h
    base/diskcache_win32.h
    base/race_checker.h
    base/timeutils.h
    base/diskcache.h
    base/fakenetwork.h
    base/gunit.h
    base/copyonwritebuffer.h
    base/mathutils.h
    base/safe_conversions.h
    base/messagequeue.h
    base/md5digest.h
    base/optionsfile.h
    base/windowpicker.h
    base/testbase64.h
    base/bind.h
    base/win32regkey.h
    base/testechoserver.h
    base/testutils.h
    base/buffer.h
    base/arraysize.h
    base/taskparent.h
    base/common.h
    base/bufferqueue.h
    base/ifaddrs-android.h
    base/urlencode.h
    base/logging.h
    base/socketpool.h
    base/sslfingerprint.h
    base/systeminfo.h
    base/rtccertificate.h
    base/asynctcpsocket.h
    base/linuxfdwalk.h
    base/referencecountedsingletonfactory.h
    base/maccocoathreadhelper.h
    base/sslidentity.h
    base/rollingaccumulator.h
    base/linux.h
    base/linked_ptr.h
    base/multipart.h
    base/deprecation.h
    base/socketstream.h
    base/json.h
    base/versionparsing.h
    base/fakeclock.h
    base/socket_unittest.h
    base/refcount.h
    base/bandwidthsmoother.h
    base/sequenced_task_checker_impl.h
    base/cryptstring.h
    base/asyncinvoker-inl.h
    base/event_tracer.h
    base/proxyinfo.h
    base/fakesslidentity.h
    base/rate_limiter.h
    base/windowpickerfactory.h
    base/safe_conversions_impl.h
    base/timestampaligner.h
    base/messagedigest.h
    base/macasyncsocket.h
    base/ipaddress.h
    base/openssl.h
    base/onetimeevent.h
    base/callback.h
    base/macwindowpicker.h
    base/transformadapter.h
    base/fileutils_mock.h
    base/opensslstreamadapter.h
    base/x11windowpicker.h
    base/event.h
    base/platform_thread_types.h
    base/criticalsection.h
    base/macsocketserver.h
    base/task_queue.h
    base/opensslidentity.h
    base/sslsocketfactory.h
    base/base64.h
    base/sharedexclusivelock.h
    base/rate_statistics.h
    base/testclient.h
    base/httpbase.h
    base/sigslottester.h
    base/file.h
    base/unixfilesystem.h
    base/asyncpacketsocket.h
    base/httpcommon-inl.h
    base/taskrunner.h
    base/posix.h
    base/test/faketiming.h
    base/win32filesystem.h
    base/bytebuffer.h
    base/networkroute.h
    base/network.h
    base/nattypes.h
    base/timedelta.h
    base/asyncfile.h
    base/asyncudpsocket.h
    base/task.h
    base/platform_file.h
    base/ratelimiter.h
    base/httpserver.h
    base/messagehandler.h
    base/macutils.h
    base/firewallsocketserver.h
    base/sequenced_task_checker.h
    base/sslstreamadapter.h
    base/socketserver.h
    base/pathutils.h
    base/stringencode.h
    base/socket.h
    base/random.h
    base/ssladapter.h
    base/thread_checker_impl.h
    base/stream.h
    base/signalthread.h
    base/winfirewall.h
    base/ifaddrs_converter.h
    base/helpers.h
    base/sslroots.h
    base/byteorder.h
    base/task_queue_posix.h
    base/openssldigest.h
    base/scopedptrcollection.h
    base/nethelpers.h
    base/libdbusglibsymboltable.h
    base/win32window.h
    base/rtccertificategenerator.h
    base/optional.h
    base/physicalsocketserver.h
    base/httprequest.h
    base/networkmonitor.h
    base/bitbuffer.h
    base/proxyserver.h
    base/thread_annotations.h
    base/atomicops.h
    base/asyncinvoker.h
    base/mod_ops.h
    base/virtualsocketserver.h
    base/checks.h
    base/natserver.h
    base/sigslotrepeater.h
    base/format_macros.h
    base/exp_filter.h
    base/keep_ref_until_done.h
    base/latebindingsymboltable.h
    base/template_util.h
    modules/audio_processing/ns/defines.h
    modules/audio_processing/ns/nsx_core.h
    modules/audio_processing/ns/windows_private.h
    modules/audio_processing/ns/nsx_defines.h
    modules/audio_processing/ns/ns_core.h
    modules/audio_processing/ns/noise_suppression_x.h
    modules/audio_processing/ns/noise_suppression.h
    modules/audio_processing/beamformer/complex_matrix.h
    modules/audio_processing/beamformer/covariance_matrix_generator.h
    modules/audio_processing/beamformer/array_util.h
    modules/audio_processing/beamformer/nonlinear_beamformer.h
    modules/audio_processing/beamformer/mock_nonlinear_beamformer.h
    modules/audio_processing/beamformer/matrix.h
    modules/audio_processing/beamformer/matrix_test_helpers.h
    modules/audio_processing/agc/agc.h
    modules/audio_processing/agc/loudness_histogram.h
    modules/audio_processing/agc/legacy/digital_agc.h
    modules/audio_processing/agc/legacy/analog_agc.h
    modules/audio_processing/agc/legacy/gain_control.h
    modules/audio_processing/agc/mock_agc.h
    modules/audio_processing/agc/agc_manager_direct.h
    modules/audio_processing/agc/gain_map_internal.h
    modules/audio_processing/agc/utility.h
    modules/audio_processing/voice_detection_impl.h
    modules/audio_processing/utility/delay_estimator_wrapper.h
    modules/audio_processing/utility/delay_estimator_internal.h
    modules/audio_processing/utility/block_mean_calculator.h
    modules/audio_processing/utility/delay_estimator.h
    modules/audio_processing/echo_cancellation_impl.h
    modules/audio_processing/high_pass_filter_impl.h
    modules/audio_processing/typing_detection.h
    modules/audio_processing/noise_suppression_impl.h
    modules/audio_processing/transient/dyadic_decimator.h
    modules/audio_processing/transient/file_utils.h
    modules/audio_processing/transient/common.h
    modules/audio_processing/transient/wpd_tree.h
    modules/audio_processing/transient/transient_suppressor.h
    modules/audio_processing/transient/daubechies_8_wavelet_coeffs.h
    modules/audio_processing/transient/moving_moments.h
    modules/audio_processing/transient/transient_detector.h
    modules/audio_processing/transient/wpd_node.h
    modules/audio_processing/aecm/echo_control_mobile.h
    modules/audio_processing/aecm/aecm_core.h
    modules/audio_processing/aecm/aecm_defines.h
    modules/audio_processing/common.h
    modules/audio_processing/three_band_filter_bank.h
    modules/audio_processing/audio_processing_impl.h
    modules/audio_processing/intelligibility/intelligibility_enhancer.h
    modules/audio_processing/intelligibility/intelligibility_utils.h
    modules/audio_processing/audio_buffer.h
    modules/audio_processing/aec/echo_cancellation.h
    modules/audio_processing/aec/aec_resampler.h
    modules/audio_processing/aec/aec_rdft.h
    modules/audio_processing/aec/aec_common.h
    modules/audio_processing/aec/aec_core_optimized_methods.h
    modules/audio_processing/aec/aec_core.h
    modules/audio_processing/test/aec_dump_based_simulator.h
    modules/audio_processing/test/audio_processing_simulator.h
    modules/audio_processing/test/protobuf_utils.h
    modules/audio_processing/test/bitexactness_tools.h
    modules/audio_processing/test/wav_based_simulator.h
    modules/audio_processing/test/test_utils.h
    modules/audio_processing/test/audio_buffer_tools.h
    modules/audio_processing/test/debug_dump_replayer.h
    modules/audio_processing/logging/apm_data_dumper.h
    modules/audio_processing/vad/gmm.h
    modules/audio_processing/vad/pole_zero_filter.h
    modules/audio_processing/vad/voice_activity_detector.h
    modules/audio_processing/vad/common.h
    modules/audio_processing/vad/pitch_internal.h
    modules/audio_processing/vad/vad_audio_proc.h
    modules/audio_processing/vad/pitch_based_vad.h
    modules/audio_processing/vad/vad_circular_buffer.h
    modules/audio_processing/vad/standalone_vad.h
    modules/audio_processing/vad/voice_gmm_tables.h
    modules/audio_processing/vad/vad_audio_proc_internal.h
    modules/audio_processing/vad/noise_gmm_tables.h
    modules/audio_processing/rms_level.h
    modules/audio_processing/gain_control_for_experimental_agc.h
    modules/audio_processing/gain_control_impl.h
    modules/audio_processing/level_controller/noise_level_estimator.h
    modules/audio_processing/level_controller/biquad_filter.h
    modules/audio_processing/level_controller/lc_constants.h
    modules/audio_processing/level_controller/saturating_gain_estimator.h
    modules/audio_processing/level_controller/down_sampler.h
    modules/audio_processing/level_controller/signal_classifier.h
    modules/audio_processing/level_controller/peak_level_estimator.h
    modules/audio_processing/level_controller/noise_spectrum_estimator.h
    modules/audio_processing/level_controller/gain_selector.h
    modules/audio_processing/level_controller/gain_applier.h
    modules/audio_processing/level_controller/level_controller.h
    modules/audio_processing/echo_control_mobile_impl.h
    modules/audio_processing/splitting_filter.h
    modules/audio_processing/render_queue_item_verifier.h
    modules/audio_processing/include/config.h
    modules/audio_processing/include/mock_audio_processing.h
    modules/audio_processing/include/audio_processing.h
    modules/audio_processing/level_estimator_impl.h
    common_audio/lapped_transform.h
    common_audio/real_fourier_openmax.h
    common_audio/fir_filter_sse.h
    common_audio/audio_ring_buffer.h
    common_audio/signal_processing/resample_by_2_internal.h
    common_audio/signal_processing/include/signal_processing_library.h
    common_audio/signal_processing/include/spl_inl_mips.h
    common_audio/signal_processing/include/real_fft.h
    common_audio/signal_processing/include/spl_inl_armv7.h
    common_audio/signal_processing/include/spl_inl.h
    common_audio/signal_processing/complex_fft_tables.h
    common_audio/fir_filter_neon.h
    common_audio/sparse_fir_filter.h
    common_audio/resampler/push_sinc_resampler.h
    common_audio/resampler/sinc_resampler.h
    common_audio/resampler/sinusoidal_linear_chirp_source.h
    common_audio/resampler/include/resampler.h
    common_audio/resampler/include/push_resampler.h
    common_audio/real_fourier_ooura.h
    common_audio/ring_buffer.h
    common_audio/wav_file.h
    common_audio/real_fourier.h
    common_audio/fft4g.h
    common_audio/window_generator.h
    common_audio/vad/vad_filterbank.h
    common_audio/vad/vad_core.h
    common_audio/vad/mock/mock_vad.h
    common_audio/vad/vad_sp.h
    common_audio/vad/vad_unittest.h
    common_audio/vad/include/webrtc_vad.h
    common_audio/vad/include/vad.h
    common_audio/vad/vad_gmm.h
    common_audio/blocker.h
    common_audio/fir_filter.h
    common_audio/wav_header.h
    common_audio/include/audio_util.h
    common_audio/channel_buffer.h
    common_audio/audio_converter.h
    modules/include/module.h
    modules/include/module_common_types.h
    common_video/rotation.h
)

function(prepend_path var prefix)
   set(listVar "")
   foreach(f ${ARGN})
      list(APPEND listVar "${prefix}/${f}")
   endforeach(f)
   set(${var} "${listVar}" PARENT_SCOPE)
endfunction(prepend_path)

prepend_path(WEBRTC_SRC webrtc/webrtc ${WEBRTC_SRC_})
prepend_path(WEBRTC_INCLUDE webrtc/webrtc ${WEBRTC_INCLUDE_})

add_library(webrtc-audioproc SHARED ${WEBRTC_SRC})
target_link_libraries(webrtc-audioproc pthread)

set(INCLUDE_INSTALL_DIR include)
set(LIB_INSTALL_DIR lib)

install(TARGETS webrtc-audioproc DESTINATION ${LIB_INSTALL_DIR})

foreach (file ${WEBRTC_INCLUDE})
    get_filename_component( dir ${file} DIRECTORY)
    STRING(REGEX REPLACE "^webrtc" "" dir ${dir})
    install(FILES ${file} DESTINATION ${INCLUDE_INSTALL_DIR}/${dir})
endforeach()


include(CMakePackageConfigHelpers)

configure_package_config_file(webrtc-audioprocConfig.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/webrtc-audioprocConfig.cmake
  INSTALL_DESTINATION ${LIB_INSTALL_DIR}/cmake/webrtc-audioproc
  PATH_VARS INCLUDE_INSTALL_DIR LIB_INSTALL_DIR
  )
  
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/webrtc-audioprocConfig.cmake" DESTINATION lib/cmake/webrtc-audioproc)
